redis_react/kubernetes/react-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-redis-server
spec:
  selector:
    app: react-redis
  ports:
    - protocol: TCP
      port: 3006  
      targetPort: 3006
  type: LoadBalancer
