redis_react/kubernetes/react-redis-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-redis-ingress

spec:
  rules:
    - host: react-redis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: react-redis-server
                port:
                  number: 3006
